changed covers and fixed merge issues

--- a/cpio/css/default.scss
+++ b/cpio/css/default.scss
@@ -40,6 +40,24 @@ $color-purple: #813687;
   color: white;
   padding: 0 !important;
 
+h1 {
+  color: white;
+
+  @media (min-width: map-get($grid-breakpoints, "lg")) {
+    font-size: 5rem;
+
+  }
+}
+}
+
+.page-cta {
+  background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url(../img/hero-01.jpg?cb=1) no-repeat !important;
+  background-position-x: left !important;
+  background-position-y: bottom !important;
+  background-size: cover !important;
+    color: white;
+  padding: 0 !important;
+
   h1 {
     color: white;
 
@@ -50,12 +68,12 @@ $color-purple: #813687;
 
 }
 
-.page-cta {
-  background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url(../img/hero-01.jpg?cb=1) no-repeat !important;
+.page-cta-nfp {
+  background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url(../img/hero-nfp.jpg?cb=1) no-repeat !important;
   background-position-x: left !important;
   background-position-y: bottom !important;
   background-size: cover !important;
-    color: white;
+  color: white;
   padding: 0 !important;
 
   h1 {
@@ -182,7 +200,6 @@ h2 {
   padding: 0.75rem 1rem;
   -webkit-transition: background 1s ease-out;
   transition: background 1s ease-out;
-  border-width: 0;
 
   @extend .no-user-select;
   @extend .shadow;
@@ -202,8 +219,7 @@ h2 {
   &.small {
     font-size: 0.9rem;
     padding: 0.25rem 0.5rem;
-    font-size: 0.9rem;
-  }
+   }
 }
 
 .page-prev,
@@ -226,7 +242,6 @@ h2 {
 .callout {
   background: #d9d9d9 !important;
   color: $gray-800;
-  background: #d9d9d9 !important;
   max-width: 350px !important;
   margin-left: auto !important;
   margin-right: auto !important;
